# frpc-webui

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md  run.sh
frontend/: package-lock.json  vite.config.ts
frontend/src/lib/: CreatePort.svelte  Status.svelte  api.ts  ports.ts
frontend/src/lib/Viewers/: PortView.svelte
frontend/src/routes/: +page.svelte
src/: config.rs  error.rs  main.rs  private.rs
